<?xml version="1.0"?>
<package format="2">
  <name>ros_mqtt</name>
  <version>0.0.0</version>
  <description>The ros_mqtt package</description>

  <maintainer email="ilya@eadsoft.com">Ilya Danilenko</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python</buildtool_depend>
  <exec_depend>python</exec_depend>

  <export>
  </export>
</package>
